# colliderml-tracking-explore

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_exploring_the_data.ipynb
src/colliderml_explore/: derived.py  io.py  plots.py
