[project]
name = "colliderml-tracking-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colliderml>=0.3.1",
    "matplotlib>=3.10.9",
    "mplhep>=1.1.2",
    "numpy>=2.4.4",
    "polars>=1.40.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.12",
]
